<resources>
    <string name="app_name">USTH Weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thursday">Thu</string>
    <string name="description">description</string>
    <string name="sunny">sunny</string>
    <string name="temp1">30C</string>
    <string name="location">Paris</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
</resources>
