<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#96FFA4">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/description"
            android:src="@drawable/images" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunny" />

        </LinearLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/location" />

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#008080"
        tools:context=".ForecastFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="30px"
                android:layout_marginEnd="100px"
                android:text="@string/thursday"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="130px"
                android:layout_height="130px"
                android:contentDescription="@string/description"
                android:src="@drawable/images" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/temp1" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="30px"
                android:layout_marginEnd="100px"
                android:text="@string/thursday"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="130px"
                android:layout_height="130px"
                android:contentDescription="@string/description"
                android:src="@drawable/images" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/temp1" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="30px"
                android:layout_marginEnd="100px"
                android:text="@string/thursday"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="130px"
                android:layout_height="130px"
                android:contentDescription="@string/description"
                android:src="@drawable/images" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/temp1" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_margin="30px"
                android:layout_marginEnd="100px"
                android:text="@string/thursday"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="130px"
                android:layout_height="130px"
                android:contentDescription="@string/description"
                android:src="@drawable/images" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/sunny" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:text="@string/temp1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>